Sync Everything for Joe. Going to see if we can work out why Mode 5 / 7 failed the other day.
Otherwise, trying out a few new additions to the legend, fixing a spelling mistake in the incomplete file parser.

Ignore the playground.py changes, didn't achieve what I wanted.

.gitignore cleaned up to make tracking some files a bit easier. Not the added .sh files are likely outdated / broken as they were properly written at home.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 *.pyc
-/allSky*
-/ecarley_stationmodel/stationmodelenv/*
+*.png
+*.mpg
+*.mp4
+*.h5
+*.npy
+ecarley_stationmodel/stationmodelenv/*
+*.dat
+*.log
+allSkyMonitor/*
+allSkyMonitor*
